...
        var isValidName by remember { mutableStateOf(true) }
        val scope = rememberCoroutineScope()

        TextField(
            value = name,
            onValueChange = { name = it },
            label = { Text("Enter Name") },
            modifier = Modifier.fillMaxWidth(),

        )
        Spacer(modifier = Modifier.height(10.dp))
        Button(onClick = {
            isValidName = validateAndInsertProfile(name)
...
                scope.launch {
                    userProfileViewModel.insertUser(name)
                    userProfileViewModel.refreshUser()
                }
            }
        }, modifier = Modifier.fillMaxWidth()) {
            Text(text = "OK")
        }
        Spacer(modifier = Modifier.height(15.dp))
        if (!isValidName) {
            Text(color = Color.Red, text = " Name cannot be blank or be more than 10 characters long", textAlign = TextAlign.Center)
        }
    }
...
