...
            NavigationBarItem(
                selected = PokemonDetail.name.toRegex().containsMatchIn("$currentRoute") || currentRoute == PokedexSummaries.name,
                onClick = { navController.navigate(PokedexSummaries.name) },
                icon = {
                    Image(
                        painter = painterResource(id = R.drawable.pok__ball_icon_svg),
                        contentDescription = "Summaries",
                        Modifier
                            .height(50.dp)
                            .width(50.dp),
                    )
                },
            )
            NavigationBarItem(
                selected = currentRoute == UserProfile.name,
                onClick = { navController.navigate(UserProfile.name) },
                icon = { Icon(Icons.Rounded.Face, contentDescription = "Profile", Modifier.height(50.dp).width(50.dp)) },
            )
        }
    }

    @Composable
    fun CreateNavHost(navController: NavHostController) {
...
